Agregando nuevo diseño con modales

--- a/test.html
+++ b/test.html
@@ -16,14 +16,15 @@
   <body>
     <div
       class="modal fade"
-      id="exampleModalToggle"
+      id="1"
       aria-hidden="true"
-      aria-labelledby="exampleModalToggleLabel"
+      aria-labelledby="1Label"
       tabindex="-1"
     >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+      <div class="modal-dialog modal-dialog-centered mw-50">
+        <div class="modal-content comicContent">
           <div class="modal-header">
+            <h5 class="card-title fs-2">1602 Witch Hunter Angela (2015) #1</h5>
             <button
               type="button"
               class="btn-close"
@@ -32,48 +33,48 @@
             ></button>
           </div>
           <div class="modal-body">
-            <div class="">
-              <img
-                src="http://i.annihil.us/u/prod/marvel/i/mg/d/03/55099c53608a6.jpg"
-                class="card-img-top"
-                alt="1602 Witch Hunter Angela (2015) #1"
-              />
-            </div>
-            <div class="">
-              <h5 class="card-title fs-2">
-                1602 Witch Hunter Angela (2015) #1
-              </h5>
-              <p class="card-text">
-                In the altered realms of BATTLEWORLD, Angela and Sera are WITCH
-                HUNTERS, the scourges of King James' England, 1602. In a land
-                beset by magic and monstrosity, they seek a new and seductive
-                evil-not witchbreed, but deal-making FAUSTIANS, who bargain with
-                ancient creatures for unnatural power! Moral ambiguity? Fancy
-                allusions? Marguerite making the most of that English degree?
-                tl;dr - try 1602 WITCH HUNTER ANGELA #1!
-              </p>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <strong>Writer:</strong> Marguerite Bennett
-                </li>
-                <li class="list-group-item">
-                  <strong>Penciller Cover:</strong> Stephanie Hans
-                </li>
-                <li class="list-group-item">
-                  <strong>Publish:</strong> June 9, 2015
-                </li>
-              </ul>
+            <div class="d-flex">
+              <div class="d-flex align-content-center">
+                <img
+                  src="http://i.annihil.us/u/prod/marvel/i/mg/d/03/55099c53608a6.jpg"
+                  class="card-img-top comicCover"
+                  alt="1602 Witch Hunter Angela (2015) #1"
+                />
+              </div>
+              <div class="container">
+                <p class="card-text">
+                  In the altered realms of BATTLEWORLD, Angela and Sera are
+                  WITCH HUNTERS, the scourges of King James' England, 1602. In a
+                  land beset by magic and monstrosity, they seek a new and
+                  seductive evil-not witchbreed, but deal-making FAUSTIANS, who
+                  bargain with ancient creatures for unnatural power! Moral
+                  ambiguity? Fancy allusions? Marguerite making the most of that
+                  English degree? tl;dr - try 1602 WITCH HUNTER ANGELA #1!
+                </p>
+                <div class="row">
+                  <div class="col-6">
+                    <strong>Writer:</strong>
+                    <p>Marguerite Bennett</p>
+                  </div>
+                  <div class="col-6">
+                    <strong>Penciller Cover:</strong>
+                    <p>Stephanie Hans</p>
+                  </div>
+                  <div class="col-4">
+                    <strong>Publish:</strong>
+                    <p>June 9, 2015</p>
+                  </div>
+                </div>
+                <!-- End Row -->
+              </div>
+              <!-- End Container -->
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <a
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      href="#exampleModalToggle"
-      role="button"
+    <a class="btn btn-primary" data-bs-toggle="modal" href="#1" role="button"
       >Open first modal</a
     >
 
